k8s/mongodb-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mongodb
  namespace: chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      name: mongodb
      namespace: chat-app
      labels:
        app: mongodb
    spec:
      containers:
      - name: chatapp-mongo
        image: mongo:latest
        command: ["mongod", "--bind_ip", "0.0.0.0"]
        ports:
        - containerPort: 27017
      volumes:
      - name: mongo-data
        persistentVolumeClaim:
          claimName: mongodb-pvc
