k8s/mongodb-svc.yml
kind: Service
apiVersion: v1
metadata:
  name: mongodb
  namespace: chat-app
spec:
  selector:
    app: mongodb
  ports:
  - port: 27017
    targetPort: 27017
